@@ -1,3 +1,6 @@
+Aug 21-25
+  ensembl: added ensembl gff3 assemblies to be downloaded and then uploaded to Jbrowse
+
 Jul 08, 2020
   agr genes: added export of genes with multiple loci
 
